@@ -1,3 +1,8 @@
+2012-05-21  Peter Gavin  <pgavin@gmail.com>
+
+	* libc/machine/or1k/include/or1k-support.h: add NOP_EXIT_SILENT;
+	exits the simulator without reporting exit code
+
 2012-05-13  Peter Gavin  <pgavin@gmail.com>
 
 	* configure.host: add or1knd target
