@@ -43,13 +43,14 @@ extern unsigned long _board_uart_irq;
 
 /*! l.nop constants */
 #define NOP_NOP          0x0000      /* Normal nop instruction */
-#define NOP_EXIT         0x0001      /* End of simulation */
+#define NOP_EXIT         0x0001      /* End of simulation, report exit status */
 #define NOP_REPORT       0x0002      /* Simple report */
 /*#define NOP_PRINTF       0x0003       Simprintf instruction (obsolete)*/
 #define NOP_PUTC         0x0004      /* JPB: Simputc instruction */
 #define NOP_CNT_RESET    0x0005	     /* Reset statistics counters */
 #define NOP_GET_TICKS    0x0006	     /* JPB: Get # ticks running */
 #define NOP_GET_PS       0x0007      /* JPB: Get picosecs/cycle */
+#define NOP_EXIT_SILENT  0x000c      /* End of simulation, silently exit */
 #define NOP_REPORT_FIRST 0x0400      /* Report with number */
 #define NOP_REPORT_LAST  0x03ff      /* Report with number */
 
